--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
   },
   "homepage": "https://github.com/dillonchr/MyResume#readme",
   "dependencies": {
-    "markdown-pdf": "^8.0.0"
+    "markdown-to-html": "0.0.13"
   }
 }
